fixed website title alignment in navbar

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,6 +2,7 @@
   color: black;
   background-color: white;
   text-decoration: none;
+  align-self: center;
 }
 
 .anchor-button{
@@ -13,7 +14,7 @@
 .navbar-container{
   display: flex;
   justify-content: space-around;
-  align-items: baseline;
+  align-content: baseline;
   border-bottom: 1px solid white;
 }
 
@@ -26,7 +27,6 @@
 .navbar ul{
   display: inline;
   list-style-type: none;
-  overflow: hidden;
 }
 .navbar li{
   list-style-type: none;
@@ -34,6 +34,8 @@
   justify-content: space-around;
   text-align: center;
   padding: 10px;
+  padding-right: 20px;
+  padding-left: 20px;
   float: left;
 }
 .navbar li:not(:last-child){
